--- a/Rmd_template.html
+++ b/Rmd_template.html
@@ -23,6 +23,10 @@
 <script src="libs/navigation-1.1/tabsets.js"></script>
 <link href="libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="libs/highlightjs-9.12.0/highlight.js"></script>
+<script src="libs/htmlwidgets-0.9/htmlwidgets.js"></script>
+<link href="libs/vis-4.20.1/vis.css" rel="stylesheet" />
+<script src="libs/vis-4.20.1/vis.min.js"></script>
+<script src="libs/visNetwork-binding-2.0.3/visNetwork.js"></script>
 <link href='libs/fluidbox/css/fluidbox.css' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
 <link href='include/css/style.css' rel='stylesheet' type='text/css'>
@@ -166,6 +170,16 @@ $(document).ready(function () {
 <h2>Including Plots</h2>
 <p>You can also embed plots, for example:</p>
 <p><img src="Rmd_template_files/figure-html/pressure-1.png" width="672" /></p>
+</section>
+<section id="visnetwork" class="level2">
+<h2>VisNetwork</h2>
+<pre class="r"><code>require(visNetwork, quietly = TRUE)
+# minimal example
+nodes &lt;- data.frame(id = 1:3)
+edges &lt;- data.frame(from = c(1,2), to = c(1,3))
+visNetwork(nodes, edges, width = &quot;100%&quot;)</code></pre>
+<div id="htmlwidget-bf0340e9e55e921f1136" style="width:100%;height:480px;" class="visNetwork html-widget"></div>
+<script type="application/json" data-for="htmlwidget-bf0340e9e55e921f1136">{"x":{"nodes":{"id":[1,2,3]},"edges":{"from":[1,2],"to":[1,3]},"nodesToDataframe":true,"edgesToDataframe":true,"options":{"width":"100%","height":"100%","nodes":{"shape":"dot"},"manipulation":{"enabled":false}},"groups":null,"width":"100%","height":null,"idselection":{"enabled":false},"byselection":{"enabled":false},"main":null,"submain":null,"footer":null,"background":"rgba(0, 0, 0, 0)"},"evals":[],"jsHooks":[]}</script>
 <p>Note that the <code>echo = FALSE</code> parameter was added to the code chunk to prevent printing of the R code that generated the plot.</p>
 </section>
 
